# python-dabbling

./: README.md
posit-academy/: README.md  pyproject.toml
posit-academy-delete/src/posit_academy/: 01-milestone.py  03-milestone.py
posit-academy/data/: 03-solution.csv
posit-academy/src/files/: indexes_dictionary.html
posit-academy/src/posit_academy/: 01_basics.ipynb  01_basics.py  02-milestone.py  02-visualize.py  02_filter_visualize.ipynb  03_create_select_columns.ipynb  04_functions.ipynb
