[tool.poetry]
name = "posit-academy"
version = "0.1.0"
description = ""
authors = ["Katie Ellsworth <83429401+kellsworthy@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "posit_academy", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
plotnine = "^0.13.0"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
ipykernel = "^6.29.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
