[tool.poetry]
name = "posit-academy"
version = "0.1.0"
description = ""
authors = ["Katie Ellsworth <83429401+kellsworthy@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "posit_academy", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
